After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739339 - [PATCH] Activating an already activated connection fails
[PATCH] Activating an already activated connection fails
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-10-29 08:54 UTC by Lubomir Rintel
Modified: 2014-11-07 15:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] cli: Activating an already activated connection fails (1.14 KB, patch)
2014-10-29 08:54 UTC, Lubomir Rintel
none Details | Review

Description Lubomir Rintel 2014-10-29 08:54:03 UTC
Created attachment 289570 [details] [review]
[PATCH] cli: Activating an already activated connection fails

See attached patch.
Comment 1 Thomas Haller 2014-10-31 13:05:46 UTC
Looks right to me.

Wasn't there are related patch from you recently? I cannot find it now. How do they relate?
Comment 2 Dan Williams 2014-10-31 14:06:57 UTC
Patch looks good to me, though we slightly changed this with danw's hack to report the AC's initial state as ACTIVATING over D-Bus.  I think that patch is still correct, but the condition it solves may not occur as often anymore.
Comment 3 Lubomir Rintel 2014-11-03 15:06:48 UTC
Pushed to master.